VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToHadronic_boostedSmearedDown.err
[8MB/2.939GB][  0%][>                                                 ][4MB/s]  [24MB/2.939GB][  0%][>                                                 ][8MB/s]  [88MB/2.939GB][  2%][=>                                                ][22MB/s]  [144MB/2.939GB][  4%][==>                                               ][28.8MB/s]  [208MB/2.939GB][  6%][===>                                              ][34.67MB/s]  [264MB/2.939GB][  8%][====>                                             ][37.71MB/s]  [320MB/2.939GB][ 10%][=====>                                            ][40MB/s]  [368MB/2.939GB][ 12%][======>                                           ][40.89MB/s]  [416MB/2.939GB][ 13%][======>                                           ][41.6MB/s]  [472MB/2.939GB][ 15%][=======>                                          ][42.91MB/s]  [528MB/2.939GB][ 17%][========>                                         ][44MB/s]  [592MB/2.939GB][ 19%][=========>                                        ][45.54MB/s]  [648MB/2.939GB][ 21%][==========>                                       ][46.29MB/s]  [712MB/2.939GB][ 23%][===========>                                      ][47.47MB/s]  [760MB/2.939GB][ 25%][============>                                     ][47.5MB/s]  [808MB/2.939GB][ 26%][=============>                                    ][47.53MB/s]  [856MB/2.939GB][ 28%][==============>                                   ][47.56MB/s]  [896MB/2.939GB][ 29%][==============>                                   ][47.16MB/s]  [936MB/2.939GB][ 31%][===============>                                  ][46.8MB/s]  [976MB/2.939GB][ 32%][================>                                 ][46.48MB/s]  [1016MB/2.939GB][ 33%][================>                                 ][46.18MB/s]  [1.031GB/2.939GB][ 35%][=================>                                ][45.91MB/s]  [1.07GB/2.939GB][ 36%][==================>                               ][45.67MB/s]  [1.117GB/2.939GB][ 38%][===================>                              ][45.76MB/s]  [1.156GB/2.939GB][ 39%][===================>                              ][45.54MB/s]  [1.195GB/2.939GB][ 40%][====================>                             ][45.33MB/s]  [1.242GB/2.939GB][ 42%][=====================>                            ][45.43MB/s]  [1.281GB/2.939GB][ 43%][=====================>                            ][45.24MB/s]  [1.328GB/2.939GB][ 45%][======================>                           ][45.33MB/s]  [1.367GB/2.939GB][ 46%][=======================>                          ][45.16MB/s]  [1.414GB/2.939GB][ 48%][========================>                         ][45.25MB/s]  [1.453GB/2.939GB][ 49%][========================>                         ][45.09MB/s]  [1.5GB/2.939GB][ 51%][=========================>                        ][45.18MB/s]  [1.547GB/2.939GB][ 52%][==========================>                       ][45.26MB/s]  [1.594GB/2.939GB][ 54%][===========================>                      ][45.33MB/s]  [1.648GB/2.939GB][ 56%][============================>                     ][45.62MB/s]  [1.695GB/2.939GB][ 57%][============================>                     ][45.68MB/s]  [1.758GB/2.939GB][ 59%][=============================>                    ][46.15MB/s]  [1.812GB/2.939GB][ 61%][==============================>                   ][46.4MB/s]  [1.867GB/2.939GB][ 63%][===============================>                  ][46.63MB/s]  [1.93GB/2.939GB][ 65%][================================>                 ][47.05MB/s]  [1.992GB/2.939GB][ 67%][=================================>                ][47.44MB/s]  [2.047GB/2.939GB][ 69%][==================================>               ][47.64MB/s]  [2.102GB/2.939GB][ 71%][===================================>              ][47.82MB/s]  [2.164GB/2.939GB][ 73%][====================================>             ][48.17MB/s]  [2.211GB/2.939GB][ 75%][=====================================>            ][48.17MB/s]  [2.25GB/2.939GB][ 76%][======================================>           ][48MB/s]  [2.289GB/2.939GB][ 77%][======================================>           ][47.84MB/s]  [2.32GB/2.939GB][ 78%][=======================================>          ][47.52MB/s]  [2.344GB/2.939GB][ 79%][=======================================>          ][47.06MB/s]  [2.375GB/2.939GB][ 80%][========================================>         ][46.77MB/s]  [2.398GB/2.939GB][ 81%][========================================>         ][46.34MB/s]  [2.422GB/2.939GB][ 82%][=========================================>        ][45.93MB/s]  [2.438GB/2.939GB][ 82%][=========================================>        ][45.38MB/s]  [2.461GB/2.939GB][ 83%][=========================================>        ][45MB/s]  [2.477GB/2.939GB][ 84%][==========================================>       ][44.49MB/s]  [2.5GB/2.939GB][ 85%][==========================================>       ][44.14MB/s]  [2.523GB/2.939GB][ 85%][==========================================>       ][43.8MB/s]  [2.539GB/2.939GB][ 86%][===========================================>      ][43.33MB/s]  [2.555GB/2.939GB][ 86%][===========================================>      ][42.89MB/s]  [2.57GB/2.939GB][ 87%][===========================================>      ][42.45MB/s]  [2.586GB/2.939GB][ 87%][===========================================>      ][42.03MB/s]  [2.609GB/2.939GB][ 88%][============================================>     ][41.75MB/s]  [2.625GB/2.939GB][ 89%][============================================>     ][41.35MB/s]  [2.641GB/2.939GB][ 89%][============================================>     ][40.97MB/s]  [2.664GB/2.939GB][ 90%][=============================================>    ][40.72MB/s]  [2.68GB/2.939GB][ 91%][=============================================>    ][40.35MB/s]  [2.695GB/2.939GB][ 91%][=============================================>    ][40MB/s]  [2.711GB/2.939GB][ 92%][==============================================>   ][39.66MB/s]  [2.734GB/2.939GB][ 93%][==============================================>   ][39.44MB/s]  [2.75GB/2.939GB][ 93%][==============================================>   ][39.11MB/s]  [2.766GB/2.939GB][ 94%][===============================================>  ][38.79MB/s]  [2.789GB/2.939GB][ 94%][===============================================>  ][38.59MB/s]  [2.805GB/2.939GB][ 95%][===============================================>  ][38.29MB/s]  [2.82GB/2.939GB][ 95%][===============================================>  ][38MB/s]  [2.836GB/2.939GB][ 96%][================================================> ][37.71MB/s]  [2.859GB/2.939GB][ 97%][================================================> ][37.54MB/s]  [2.875GB/2.939GB][ 97%][================================================> ][37.27MB/s]  [2.891GB/2.939GB][ 98%][=================================================>][37MB/s]  [2.914GB/2.939GB][ 99%][=================================================>][36.84MB/s]  [2.93GB/2.939GB][ 99%][=================================================>][36.59MB/s]  [2.939GB/2.939GB][100%][==================================================][36.71MB/s]  [2.939GB/2.939GB][100%][==================================================][36.71MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_127683/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_127683/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
